<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="app_logo_description">Application logo: hand is voting</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="upcoming_elections">Upcoming elections</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="election_information">Election Information</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="voting_locations">Show voting locations</string>
    <string name="ballot_information">Show ballot information</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="description_profile_photo">Profile photo of the representative</string>
    <string name="representative_search">Representative Search</string>
    <string name="enter_address_line_2">Enter address line 2</string>
    <string name="enter_address_line_1">Enter address line 1</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_zip_code">Enter zip code</string>
    <string name="address_check_error">Please check fields, state and city are mandatory</string>
    <string name="facebook_icon">Picture with facebook icon</string>
    <string name="picture_with_twitter_icon">Picture with twitter icon</string>
    <string name="picture_with_www_icon">Picture with www icon</string>
    <string name="profile_photo_of_representative">Profile photo of representative</string>
    <string name="unfollow_election">UNFOLLOW ELECTION</string>
    <string name="follow_election">FOLLOW ELECTION</string>
    <string name="representative_title">Representatives Search</string>
    <string name="elections_title">Elections</string>
    <string name="launch_title">Welcome</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="cannot_connect_services">Cannot connect remote services</string>
    <string name="cannot_connect_services_check">Cannot connect remote services, please check if internet is enabled</string>
    <string name="wrong_response">Connection was OK, but wrong data are received</string>
    <string name="please_retart_app">Internal error occurred, please restart application</string>
    <string name="enable_location_services">Please enable location services. If enabled, please wait and try later</string>
    <string name="wrong_location">Something wrong with you location. Are you on the Earth ?</string>
    <string name="my_representatives">My Representatives</string>

</resources>
