<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motion_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="0dp"
                app:layoutDescription="@xml/fragment_representative_scene"
                app:layout_scrollFlags="scroll|snap">

                <TextView
                    android:id="@+id/search_title"
                    style="@style/TitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/representative_search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/address_line_1"
                    style="@style/RegularTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:autofillHints="streetAddress"
                    android:hint="@string/enter_address_line_1"
                    android:inputType="textPostalAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_title" />

                <EditText
                    android:id="@+id/address_line_2"
                    style="@style/RegularTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:autofillHints="streetAddress"
                    android:hint="@string/enter_address_line_2"
                    android:inputType="textPostalAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_1" />

                <EditText
                    android:id="@+id/city"
                    style="@style/RegularTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:autofillHints="addressLocality"
                    android:hint="@string/enter_city"
                    android:inputType="textPostalAddress"
                    app:layout_constraintEnd_toStartOf="@id/state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_2" />

                <Spinner
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autofillHints="addressLocality"
                    android:inputType="textPostalAddress"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="@id/city"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/city"
                    app:layout_constraintTop_toTopOf="@id/city" />

                <EditText
                    android:id="@+id/zip"
                    style="@style/RegularTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:autofillHints="postalCode"
                    android:hint="@string/enter_zip_code"
                    android:inputType="number"
                    android:maxLength="5"
                    app:layout_constraintEnd_toEndOf="@id/city"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/city" />

                <Button
                    android:id="@+id/button_search"
                    style="@style/ButtonStyle"

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"

                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_big"

                    android:text="@string/find_my_representatives"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/zip" />

                <Button
                    android:id="@+id/button_location"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_big"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:text="@string/use_my_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_search" />

            </androidx.constraintlayout.motion.widget.MotionLayout>

            <TextView
                android:id="@+id/my_representatives"
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/my_representatives" />

        </com.google.android.material.appbar.AppBarLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:fadeVisible="@{viewModel.showLoading.booleanValue()}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            motion:visibilityMode="ignore" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
